--- a/views/layouts/govuk_template.html
+++ b/views/layouts/govuk_template.html
@@ -47,7 +47,7 @@
     </div>
 
     
-    <header role="banner" id="global-header" class="{% block header_class %}{% endblock %}">
+    <header role="banner" id="global-header" class="{{header_class}}">
       <div class="header-wrapper">
         <div class="header-global">
           <div class="header-logo">
